# vcut

./: .gitignore  LICENSE  README.md  pyproject.toml  spec.md
.beads/: issues.jsonl
.claude/skills/create-issue/: SKILL.md
src/cut_txt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vcut/: cli.py  editor.py  render.py  transcribe.py
src/vcut.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test-media/: README.md
tests/: conftest.py  test_cli.py  test_editor.py  test_render.py  test_transcribe.py
tests/fixtures/transcripts/: basic.txt  overlapping.txt  reordered.txt  with-comments.txt
tests/fixtures/videos/: README.md
